--- a/les_voix_dans_les_hauts_parleurs.html
+++ b/les_voix_dans_les_hauts_parleurs.html
@@ -195,12 +195,14 @@
                     <p class="card-title fontseparateur">SOMMAIRE</p>
                     <!--TITRE DES CHAPITRE AVEC CLASS SOMMAIRECHAPITRECOURANT POUR LE CHAPITRE EN COURS-->
                     <div style="line-height: 200%;">
-                        <p><a class="card-text sommaire" href="autoportrait1.html">Autoportrait en pied (1)</a></p>
-                        <p><a class="card-text sommaire" href="ami.html">L'ami qui me parle</a></p>
-                        <p><a class="card-text sommairechapitrecourant" href="parleurs.html">Les hauts-parleurs</a></p>
-                        <p><a class="card-text sommaire" href="/splendeur">La splendeur du trône</a></p>
-                        <p><a class="card-text sommaire" href="/portes">Les portes bleues</a></p>
-                        <p><a class="card-text sommaire" href="/autoportrait2">Autoportrait en pied (2)</a></p>
+                        <p><a class="card-text sommaire" href="autoportrait_en_pied.html">Autoportrait en pied</a></p>
+                        <p><a class="card-text sommaire" href="l_ami_qui_me_parle.html">L'ami qui me parle</a></p>
+                        <p><a class="card-text sommairechapitrecourant" href="les_voix_dans_les_hauts_parleurs.html">Les hauts-parleurs</a></p>
+                        <p><a class="card-text sommaire" href="sud_express.html">Sud-Express</a></p>
+                        <p><a class="card-text sommaire" href="la_splendeur_trone.html">La splendeur du trône</a></p>
+                        <p><a class="card-text sommaire" href="les_portes_bleues.html">Les portes bleues</a></p>
+                        <p><a class="card-text sommaire" href="les_mots_de_passe.html">Les mots de passe</a></p>
+                        <p><a class="card-text sommaire" href="petit_passage.html">Petit passage</a></p>
                     </div>
                 </div>
             </div>
